--- a/styles/pagina-agregar.css
+++ b/styles/pagina-agregar.css
@@ -15,7 +15,7 @@ body{
     width: 300px;
     padding:20px 15px;
     color:gray;
-    background-color: white; /*#e1e5f2*/
+    background-color: ghostwhite; /*#e1e5f2*/
     
 }
 .barra-lateral .nombre-software{
@@ -47,7 +47,7 @@ body{
     align-items: center;
     text-decoration: none;
     border-radius: 10px;
-    background-color: white;
+    background-color: ghostwhite;
     color: gray;
 }
 .barra-lateral .navegacion a:hover{
@@ -72,83 +72,80 @@ ul li:hover a {
 /*-------main------*/
 main{
     margin-left: 300px;
-    padding:20px;
-}
-
-.contenedor-opcion{
+    padding: 20px;
+    box-sizing: border-box;
     display: flex;
+    height: 100vh;
+    justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-left: 250px;
-   
 }
 
-.nombre {
-    color: grey;
+.container{
+    max-width: 700px;
+    width: 100%;
+    padding: 25px 30px;
+    background-color: ghostwhite;
+    border-radius:20px;
+}
+/* .container .tittle{
+    font-size: 26px;
+    font-weight: 500;
+   text-align: center;
+  
+  
+} */
+.container form{
     display: flex;
-    /*float: left;*/
-    width:20%;
-    margin-right:2%;
-    
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 10px 12px 0;
 }
 
+form .form-group{
+    margin-bottom: 15px;  
+    width: calc(100%/2);
+}
 
-.caja {
-    border:1px solid gray;
-    height:50px;
-    overflow: hidden;
-    width: 230px;
-    position:relative;
-    margin-left: 5px;
-    
- }
+form span{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
 
- select {
-    background: white;
-    border: none;
-    font-size: 16px;
-    height: 50px;
-    padding: 10px;
-    width: 270px;
+.form-group input{
+    height: 40px;
+    width: 80%;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #D2B4DE;
+    padding-left: 15px;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+}
+.form-group input:focus,
+.form-group input:valid{
+    border-color: #c2f1fa;
+}
+
+form .button{
+    width: 100%;
+    height: 40px;
+    margin: 40px 0;
+}
+
+form .button input{
+    width: 100%;
+    height: 100%;
+    outline: none;
     cursor: pointer;
-    position:relative; 
- }
-
- select:focus{ outline: none;}
- 
- .caja::after{
-     content:"\025be";
-     display:table-cell;
-     padding-top:10px;
-     text-align:center;
-     width:40px;
-     height:40px;
-     background-color:#D2B4DE;
-     position:absolute;
-     top:0;
-     right:0px;	
-     pointer-events: none;
- }
-
- .fecha{
-    background: #D2B4DE;
-    border: none;
-    border-radius: 10px;
-    border:1px solid gray;
+    background: linear-gradient(130deg, #c2f1fa, #D2B4DE);
+    color: gray;
     font-size: 16px;
-    text-align: center;
-    height: 50px;
-    padding:10px;
-    cursor: pointer;   
- }
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+}
+form .button input:hover{
+    background: linear-gradient(130deg, #D2B4DE, #c2f1fa);
+}
 
- .buscar-btn {
-    background: white;
-    color: black;
-    margin-top:50px;
-    border-radius:5px;
-    margin-left: 400px;
-    padding: 10px 20px;
-    font-weight: bold;
-    cursor: pointer;
- }
