--- a/styles/pagina-agregar.css
+++ b/styles/pagina-agregar.css
@@ -213,3 +213,40 @@ form #boton button:hover{
       transform: scale(1.0); 
     } 
   }
+
+  /*Estilos al select*/
+
+.caja {
+    margin:10px auto 10px auto;	
+    border-radius: 10px;
+    height:30px;
+    overflow: hidden;
+    width: 230px;
+    position:relative;
+
+ }
+
+ select {
+    background:#e3f2fd;
+    border: none;
+    font-size: 16px;
+    height: 30px;
+    padding: 2px;
+    width: 250px;
+    cursor: pointer;
+ }
+ select:focus{ outline: none;}
+ 
+ .caja::after{
+     content:"\025be";
+     display:table-cell;
+     padding-top:7px;
+     text-align:center;
+     width:30px;
+     height:30px;
+     background-color:gray;
+     position:absolute;
+     top:0;
+     right:0px;	
+     pointer-events: none;
+ }
